Dodat prikaz alarma i prebacen prikaz logova u drugu app

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -2,13 +2,18 @@
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
     <ul class="navbar-nav mr-auto">
       <li title="Home" class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/">
+        <a class="nav-link" routerLinkActive="active" routerLink="/add-rule">
           <span style="color: white; !important" class="fa fa-home fa-lg"></span>
         </a>
       </li>
       <li title="See logs" class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/send-log">
-          Send logs
+        <a class="nav-link" routerLinkActive="active" routerLink="/see-logs">
+          LOGS
+        </a>
+      </li>
+      <li title="See logs" class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/alarms">
+          ALARMS
         </a>
       </li>
     </ul>
