Dodata pretraga po username i ip i regex pretraga

--- a/frontend/src/app/components/see-logs/see-logs.component.css
+++ b/frontend/src/app/components/see-logs/see-logs.component.css
@@ -18,3 +18,9 @@ table {
   font-size: 14px;
   width: 100%;
 }
+
+.regex-checkbox {
+  padding-top:13px;
+  margin-left: 0px;
+  padding-left: 0px;
+}
