--- a/frontend/src/app/components/see-logs/see-logs.component.html
+++ b/frontend/src/app/components/see-logs/see-logs.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row" style="display: inline-block">
     <form class="rule-form" [formGroup]="myForm" (ngSubmit)="submit()">
-      <div class="col-10" style="float: left;">
+      <div class="col-2" style="float: left;">
         <mat-form-field class="input-full-width">
           <!--input matInput placeholder="Rule" formControlName="rule" id="rule"-->
           <mat-label>Log</mat-label>
@@ -16,20 +16,39 @@
         </mat-form-field>
       </div>
 
-      <!--div class="col-4" style="float: left;">
+      <div class="col-2" style="float: left;">
         <mat-form-field class="input-full-width">
-          <input matInput placeholder="Sender" formControlName="sender" id="sender" type="text">
+          <input matInput placeholder="IP address" formControlName="ip" id="ip" type="text">
         </mat-form-field>
-      </div-->
+      </div>
+
+      <div class="col-2 regex-checkbox" style="float: left;">
+        <mat-checkbox formControlName="ipRegex" id="ipRegex">
+          Use regex
+        </mat-checkbox>
+      </div>
 
       <div class="col-2" style="float: left;">
-          <button mat-flat-button color="primary" type='submit'>Filter logs</button>
+        <mat-form-field class="input-full-width">
+          <input matInput placeholder="Username" formControlName="username" id="username" type="text">
+        </mat-form-field>
+      </div>
+
+      <div class="col-2 regex-checkbox" style="float: left;">
+        <mat-checkbox formControlName="usernameRegex" id="usernameRegex">
+          Use regex
+        </mat-checkbox>
+      </div>
+      <div class="row">
+        <div class="col-5">
+            <button mat-flat-button color="primary" type='submit'>Search</button>
+        </div>
       </div>
     </form>
   </div>
 
 
-  <table mdbTable>
+  <table class="table" mdbTable>
       <thead>
         <tr>
           <th *ngFor="let name of colNames" scope="col">{{name}} </th>
@@ -37,9 +56,11 @@
       </thead>
       <tbody>
         <tr mdbTableCol *ngFor="let el of tempLogs">
-          <th scope="row">{{el.logType}}</th>
-          <td>{{el.ipAddress}}</td>
-          <td>{{el.timestamp}}</td>
+          <th scope="row">{{el?.logType}}</th>
+          <td>{{el?.ipAddress}}</td>
+          <td>{{el?.username}}</td>
+          <td>{{el?.timestamp}}</td>
+          <td>{{el?.message}}</td>
         </tr>
       </tbody>
     </table>
