Custom rule support

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,11 @@
           ALARMS
         </a>
       </li>
+      <li title="Custom rule" class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/custom-rule">
+          CUSTOM RULE
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
