Dodati prikazi query-a

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           LOGS
         </a>
       </li>
-      <li title="See logs" class="nav-item">
+      <li title="Alarms" class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/alarms">
           ALARMS
         </a>
@@ -21,6 +21,11 @@
           CUSTOM RULE
         </a>
       </li>
+      <li title="Users" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/find-users">
+            USERS
+          </a>
+        </li>
     </ul>
   </div>
 </nav>
