--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -26,6 +26,11 @@
             USERS
           </a>
         </li>
+      <li title="Report" class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/report">
+          REPORT
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
